# Aviation_accidents_rag

./: .gitignore  _env  app.py  main.py  pyproject.toml  rag_architecture.html  test_gemma.py
.github/agents/: rag-project.agent.md
data/: Accident report to Deccan Aviation Bell 206B3 VT-DAP on 3rd March 2002 at Kovvadalanka_removed.txt  Final Report of VT-RLA.txt  VT-AXV.txt  VT-CAJ.txt  VT-ECQ.txt  VT-EFL.txt  VT-EGD.txt  VT-EGK.txt  VT-EIE-2.txt  VT-EJW.txt  VT-EOA.txt  VT-EQM.txt  VT-EUJ.txt  VT-GJH.txt  VT-MMM.txt  VT-SIA.txt  VT-SSA.txt  mid air collision-IL-76-2.txt
